fix #34: increase breakpoint to work on iphone 5s

--- a/src/stylesheets/screens/_about-screen.scss
+++ b/src/stylesheets/screens/_about-screen.scss
@@ -58,7 +58,7 @@
       margin-right: 10px;
     }
   }
-  @media screen and (max-height: 300px) {
+  @media screen and (max-height: 320px) {
     p {
       font-size: 14px;
     }
